Mise à jour des projets du portfolio - Ajout des champs stack et isPrivateRepo

--- a/content/projects/restaurant-vitrine.mdx
+++ b/content/projects/restaurant-vitrine.mdx
@@ -1,10 +1,16 @@
 ---
-title: Restaurant WordPress Headless
+title: Site Vitrine Restaurant (Headless)
 description: Site web moderne pour un restaurant utilisant Next.js et WordPress comme CMS Headless, offrant une expérience utilisateur fluide et des performances optimales.
 date: "2023-12-01"
 url: https://nextjs-wordpress-headless-cms-xi-sage.vercel.app/
-published: true
 repository: TeeBo8/restaurant-wordpress-headless
+published: true
+isPrivateRepo: false
+stack:
+  - Next.js
+  - WordPress (Headless CMS)
+  - TypeScript
+  - Tailwind CSS
 ---
 
 [![](https://i.imgur.com/8Fy7GZF.png)](https://nextjs-wordpress-headless-cms-xi-sage.vercel.app/)
