--- a/content/projects/tiblog.mdx
+++ b/content/projects/tiblog.mdx
@@ -5,6 +5,13 @@ date: "2024-02-15"
 url: https://tiblog.vercel.app/
 published: true
 repository: TeeBo8/tiblog
+isPrivateRepo: false
+stack:
+  - Next.js (App Router)
+  - TypeScript
+  - Tailwind CSS
+  - CMS Butter
+  - Vercel
 ---
 
 [![](https://i.imgur.com/KZHnKWL.png)](https://tiblog.vercel.app/)
