ajout culina.me + changement des dates

--- a/content/projects/cyberpunkchat.mdx
+++ b/content/projects/cyberpunkchat.mdx
@@ -1,7 +1,7 @@
 ---
 title: Cyberpunkchat - T3 Cloneathon
 description: Une application de chat IA de calibre mondial, créée pour le T3 Cloneathon. Allant bien au-delà d'un simple clone, ce projet intègre une expérience utilisateur immersive, un support multi-LLM (OpenRouter, Groq, Gemini) et des outils créatifs uniques comme un générateur de missions RPG et de personnages.
-date: "2025-06-17"
+date: "2024-08-20"
 url: https://www.cyberpunkchat.io/
 published: true
 repository: https://github.com/TeeBo8/T3Chatcloneathon
@@ -21,7 +21,7 @@ stack:
 
 [![](/images/projects/cyberpunkchat-card.png)](https://www.cyberpunkchat.io/)
 
-Cyberpunkchat est une application de chat IA révolutionnaire développée pour le T3 Cloneathon. Bien plus qu'un simple clone, cette plateforme offre une expérience utilisateur immersive dans un univers cyberpunk, combinant intelligence artificielle avancée et créativité sans limites.
+Cyberpunkchat est une application de chat IA révolutionnaire développée pour le T3 Cloneathon. Bien plus qu'un simple clone, cette plateforme en cours de développement offre une expérience utilisateur immersive dans un univers cyberpunk, combinant intelligence artificielle avancée et créativité sans limites.
 
 ## Fonctionnalités principales
 
