--- a/content/projects/eco-warrior.mdx
+++ b/content/projects/eco-warrior.mdx
@@ -43,12 +43,5 @@ Développé avec Next.js et TypeScript pour garantir des performances optimales 
 
 EcoWarrior représente plus qu'une simple application : c'est un engagement concret pour la planète. Avec un objectif de 5000 membres premium pour commencer l'acquisition de terres naturelles, cette plateforme transforme chaque abonnement en action directe pour la protection de l'environnement, démontrant qu'il est possible d'allier technologie et responsabilité écologique.
 
-<div className="flex justify-end gap-2 mt-5">
-  <a href="https://github.com/TeeBo8" target="_blank" rel="noopener noreferrer">
-    <img src="https://i.imgur.com/gNeMtO4.png" alt="GitHub" width="24" height="24" />
-  </a>
-  <a href="https://x.com/THIBAUL76280609" target="_blank" rel="noopener noreferrer">
-    <img src="https://i.imgur.com/yvDFaXX.png" alt="Twitter" width="24" height="24" />
-  </a>
-</div>
+<SocialLinks />
 
