suppression culina et log compteur de vue

--- a/content/projects/cyberpunkchat.mdx
+++ b/content/projects/cyberpunkchat.mdx
@@ -1,6 +1,6 @@
 ---
 title: Cyberpunkchat - T3 Cloneathon
-description: Une application de chat IA de calibre mondial, créée pour le T3 Cloneathon. Allant bien au-delà d'un simple clone, ce projet intègre une expérience utilisateur immersive, un support multi-LLM (OpenRouter, Groq, Gemini) et des outils créatifs uniques comme un générateur de missions RPG et de personnages.
+description: Projet personnel - Une application de chat IA de calibre mondial, créée pour le T3 Cloneathon. Allant bien au-delà d'un simple clone, ce projet intègre une expérience utilisateur immersive, un support multi-LLM (OpenRouter, Groq, Gemini) et des outils créatifs uniques comme un générateur de missions RPG et de personnages.
 date: "2024-08-20"
 url: https://www.cyberpunkchat.io/
 published: true
