--- a/content/projects/eco-warrior.mdx
+++ b/content/projects/eco-warrior.mdx
@@ -1,6 +1,6 @@
 ---
 title: EcoWarrior
-description: Plateforme web engagée pour la sensibilisation au changement climatique, offrant un assistant IA, un dashboard de données climatiques en temps réel, une carte d'impact, une calculatrice d'empreinte carbone et un système premium pour la protection de la nature.
+description: Projet personnel - Plateforme web engagée pour la sensibilisation au changement climatique, offrant un assistant IA, un dashboard de données climatiques en temps réel, une carte d'impact, une calculatrice d'empreinte carbone et un système premium pour la protection de la nature.
 date: "2024-12-10"
 url: https://eco-warrior-site.vercel.app/en
 published: true
