--- a/content/projects/microsaas-genie.mdx
+++ b/content/projects/microsaas-genie.mdx
@@ -1,6 +1,6 @@
 ---
 title: MicroSaaS Genie
-description: Application web pour aider les entrepreneurs à trouver, valider et (potentiellement) lancer des idées de MicroSaaS, avec un accent sur la validation par la donnée et l'IA.
+description: Projet personnel - Application web pour aider les entrepreneurs à trouver, valider et (potentiellement) lancer des idées de MicroSaaS, avec un accent sur la validation par la donnée et l'IA.
 date: "2023-11-15"
 url: https://microsaasgenie.vercel.app/
 published: true
